# CMakeEOSStartKits

./: .gitignore  CMakeLists.txt  ReadMe.md
helloworld/: CMakeLists.txt  helloworld.wasm
helloworld/include/: helloworld.hpp
helloworld/src/: helloworld.cpp
